<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp20"
    android:padding="@dimen/dp20"
    android:background="@drawable/bg_card_player">

    <LinearLayout
        android:id="@+id/descriptions_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp15"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ivPlayer"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivPlayer">

        <TextView
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/first_name_player"
            android:fontFamily="sans-serif"
            android:text="@string/player_first_first_name"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/sp22" />

        <TextView
            android:id="@+id/secondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_first_second_name"
            android:textAlignment="textEnd"
            android:textSize="@dimen/sp22"
            android:textColor="@color/white"
            android:contentDescription="@string/second_name_player"
            android:fontFamily="sans-serif"/>

        <TextView
            android:id="@+id/teamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/team_name_player"
            android:fontFamily="sans-serif"
            android:text="@string/player_first_teamPlayer"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/sp22" />

        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/player_first_numberPlayer"
            android:textAlignment="textEnd"
            android:textSize="@dimen/sp22"
            android:textColor="@color/white"
            android:contentDescription="@string/number_player"
            android:fontFamily="sans-serif"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivPlayer"
        android:layout_width="@dimen/dp125"
        android:layout_height="@dimen/dp175"
        android:clickable="true"
        android:contentDescription="@string/image_player"
        android:focusable="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/card_player_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>